<resources>
    <string name="app_name">Jabrutouch</string>
    <string name="title_activity_slide">SlideActivity</string>
    <string name="welcome_to">Bienvenido a</string>
    <string name="Jabrutouch">Jabrutouch</string>
    <string name="lorem">Tu plataforma para estudiar Mishná y Guemará en cualquier lugar</string>
    <string name="Learn">El Talmud a tu alcance</string>
    <string name="give">Regala sesiones de estudio</string>
    <string name="ask">Pregunta al Rav cuando quieras</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="email_or_ph">Email o teléfono</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="dont_have">No tienes una cuenta?</string>
    <string name="sign_up">Crear cuenta</string>
    <string name="forgot_pass">¿Olvidaste tu contraseña?</string>
    <string name="verification">Verificación</string>
    <string name="we_will_sen">Te enviaremos un código para verificar tu número de teléfono</string>
    <string name="country">PAÍS</string>
    <string name="phone_number">TELÉFONO</string>
    <string name="send">Enviar</string>
    <string name="verification_code">Código de verificación</string>
    <string name="enter_the">Introduce el código enviado al</string>
    <string name="didnt_get">No recibiste el código?</string>
    <string name="send_again"><u>Enviar otra vez</u></string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="already">Ya tienes una cuenta?</string>
    <string name="sign_up_title">Crear cuenta</string>
    <string name="sign_in_title"><u>Iniciar sesión</u></string>
    <string name="main">Inicio</string>
    <string name="downloads">Descargas</string>
    <string name="gemara">Guemará</string>
    <string name="mishna">Mishná</string>
    <string name="donations">Keter</string>
    <string name="profile">Perfil</string>
    <string name="about">Sobre nosotros</string>
    <string name="message_center">Centro de mensajes</string>
    <string name="donation_center">Lista de honor</string>
    <string name="donate">Regalar</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="are_you_sure">Estás seguro?</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="todays_daf">DAF YOMI DE HOY</string>
    <string name="welcome_to_the_new">Bienvenido al nuevo\n Jabrutouch!</string>
    <string name="recent_gmara">ÚLTIMAS PÁGINAS DE GUEMARÁ</string>
    <string name="recenr_mishna">ÚLTIMAS PÁGINAS DE MISHNÁ</string>
    <string name="seder_moed">Seder Moed</string>
    <string name="seder_zeraim">Seder Zeraim</string>
    <string name="seder_noshim">Seder Nashim</string>
    <string name="seder_nezikin">Seder Nezikin</string>
    <string name="seder_kodshim">Seder Kodashim</string>
    <string name="seder_taharot">Seder Taharot</string>
    <string name="done">Listo</string>
    <string name="no_download">No hay descargas todavía</string>
    <string name="View_all">Ver todas las clases</string>
    <string name="chapters">Capítulos</string>
    <string name="chapter">Capítulo</string>
    <string name="mishnaiot">Mishnaiot</string>
    <string name="min">min</string>
    <string name="lessons">Clases</string>
    <string name="pages">Paginas</string>
    <string name="coming_soon">Próximamente</string>
    <string name="no_pages">No hay clases todavía</string>
    <string name="close">Close</string>
    <string name="in_development">Próximamente</string>
    <string name="dowloded">You\'ve already downloaded it</string>
    <string name="error">Error downloading file</string>
    <string name="this_lesson">Has recibido esta\n clase como regalo de:</string>
    <string name="location">location</string>
    <string name="Appreciate">Dale las gracias y empieza la clase</string>
    <string name="jacobo">Jacobo Cojab</string>
    <string name="mexico">Mexico</string>
    <string name="about_pdf">El término jabruta (lit: \'amistad\'  o \'compañerismo\') es el nombre con el que se conoce la técnica de estudio judía, dinámica e interactiva, mediante la cual, dos estudiantes o compañeros de estudio, analizan, comentan y debaten juntos un texto de Torá. La jabruta es el método de estudio del Talmud por excelencia.\n\nDebido a las características señaladas, hemos creído que \"Jabruta\" era el término idóneo y más apropiado para darle nombre a nuestra plataforma.\n\nLa meta principal de una jabruta es estudiar el Talmud eliminando el aura de oscuridad y confusión que para muchos esconde su estudio. Tenemos la plena convicción de que el Talmud se puede estudiar con claridad y convertirse en una experiencia inspiradora y entretenida. Para ello, hemos recurrido a los recursos tecnológicos más innovadores que nos ofrece el mundo actual.\n\nDesde que lanzamos hace once años nuestra revolucionaria iniciativa para enseñar Talmud en la red, la respuesta que hemos recibido ha sido, definitivamente, increíble.\n\nEn 2012, nuestro estimado amigo Eduardo Alfie de México, reunió a un grupo de personas que dedicaron en memoria de Alberto Saba Z\"L la primera versión de Jabrutouch iPad. Un año más tarde, y tras un éxito rotundo, conocimos a quien hoy es otro gran amigo, Jacobo Cojab, también de México. Él y su hermano apoyaron generosamente el desarrollo de la aplicación para teléfonos móviles facilitando el estudio del Talmud a miles de personas de todo el mundo desde cualquier dispositivo móvil. A todos ellos les estaremos eternamente agradecidos por habernos ayudado a convertir este gran proyecto en una realidad.\n\nHoy, con la experiencia adquirida y gracias a las nuevas posibilidades que nos ofrece la tecnología actual, damos la bienvenida a la nueva versión de Jabrutouch. Hemos creado una nueva plataforma de estudio, más potente y variada, que irá mejorando y actualizándose conforme a los deseos y peticiones de los usuarios.\n\nJabrutouch es un proyecto ambicioso y en constante desarrollo que, día a día, no deja de crecer y agregar más contenidos a su plataforma para ofrecer nuevas alternativas y llegar a más audiencias. Su alcance es tan grande, que se ha convertido en una herramienta de estudio popular en personas de toda condición que forman el mundo judío hispanoparlante.\n\nNo hay mejor recompensa que el agradecimiento por un trabajo bien hecho. Y la mejor prueba son las innumerables y sorprendentes muestras de agradecimiento que recibimos en todo tipo de lugares como sinagogas o incluso aeropuertos donde la gente se acerca para decirnos \"Hola, yo estudio con Jabrutouch\" o simplemente \"Gracias por haber hecho esto\". Historias como estas son el motor que nos impulsa a seguir trabajando.\n\n\nGracias,\n\nEl Equipo de Jabrutouch\n\n</string>
    <string name="otra">otra iniciativa de</string>
    <string name="tashema">TASHEMA</string>
    <string name="elige">Elige tu clase en audio o video. Estudia a tu gusto y a tu ritmo.</string>
    <string name="con">Con el sistema C.A.F puedes apoyar personalmente este gran proyecto.</string>
    <string name="si_te">Si te surge alguna pregunta, puedes resolverla con sólo apretar un botón</string>
    <string name="no_internet">no hay conexión a internet</string>
    <string name="profile_comp">Barra de progreso</string>
    <string name="topic">Temas de interés</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="community">Kehila</string>
    <string name="religious_level">Religious Level</string>
    <string name="education">Educación</string>
    <string name="occupation">Occupation</string>
    <string name="second_email">Mail adiciona</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="remove_account">Eliminar cuenta</string>
    <string name="Lessons_donated">Shiurim \ndonados</string>
    <string name="Donate_lessons">DONAR SHIURIM</string>
    <string name="Lessons_Learned">Shiurim \naprendidos</string>
    <string name="Edit_rofile">Editar Perfil</string>
    <string name="Community">Community</string>
    <string name="you_wont">You won\'t be able to use this\n account in the future anymore</string>
    <string name="stay">Stay with us</string>
    <string name="save">Save</string>
    <string name="interests">Temas de interés</string>
    <string name="add_photo">Subir foto</string>
    <string name="send_pass">Ingresa tu e-mail para recibir una nueva contraseña</string>
    <string name="send_now">SEND now</string>
    <string name="email_sent">E-Mail enviado</string>
    <string name="we_sent">Acabamos de enviarte una nueva\n contraseña al siguiente e-mail:</string>
    <string name="ok">ok</string>
    <string name="please">Ahi tendrás tu nueva contraseña</string>
    <string name="messages">Mensajes</string>
    <string name="jabru_team">Jabrutouch Team</string>
    <string name="jabrutouch_team">Jabrutouch Team</string>
    <string name="offline">you’re offline, please try later</string>
    <string name="no_sheurim">There is no shiurim on this page</string>
    <string name="write_message">write message</string>
    <string name="version">Version</string>
    <string name="version_beta">Versión beta</string>
    <string name="forgot_password">Me olvidé la contraseña</string>
    <string name="title_activity_gallery_slide">GallerySlideActivity</string>
    <string name="ask_the_rabbi">Ask the Rabbi</string>
    <string name="delete">Delete</string>
    <string name="server_message">¡Vaya! Parece que no estás registrado en el sistema. Aunque te hayas registrado previamente en la Web, tendrás que registrarte de vuelta en la aplicación.</string>
    <string name="not_valid">this is not a valid mail address</string>
    <string name="recupera">Recupera tu contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="OK_regístrame">Regístrame</string>
    <string name="no_messages">No hay mensajes todavía</string>
    <string name="offline_for_messages">You have no internet. The message will be sent when the connection is resumed</string>
    <string name="send_offline_for_messages">Offline messages sent</string>
    <string name="old_pass">Contraseña antigua</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="confirm">Confirmar contraseña</string>
    <string name="error_save">Error, cant save user update</string>
    <string name="pass_change">password changed</string>
    <string name="problme">The lesson seems to have been deleted from your storage. Please delete the lesson here and download it again</string>
    <string name="message_sent">Message sent</string>
    <string name="want_to_delete">Delete page</string>
    <string name="are_yoe_sure">Are you sure you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload">Upload Pictures Option</string>
    <string name="how_to">How do you want to set your picture?</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_whatsapp">Send WhatsApp</string>
    <string name="full">Perfil completado</string>
    <string name="phone_number_profile">Número de teléfono</string>
    <string name="empty">Vacío</string>
    <string name="done_profile">Hecho</string>
    <string name="cancel_subs">* Puedes cancelar tu suscripción en cualquier momento</string>
    <string name="Subscription">Suscripción</string>
    <string name="Single_payment">Pago único</string>
    <string name="el_banco">El banco de ketarim</string>
    <string name="esta_vacio">¡Esta vacio!</string>
    <string name="Empieza_la">Empieza la clase</string>
    <string name="Regala_ketarim">Regala ketarim</string>
</resources>