<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jabrutouch_background"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".ui.sign_in.SignInActivity"
            tools:ignore="UselessParent">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
android:textStyle="bold"
                android:maxLines="1"
                android:text="@string/sign_up_title"
                android:textColor="@color/sign_in_color"
                android:textSize="25sp"
                app:autoSizeTextType="uniform" />


            <EditText
                android:id="@+id/SUF_first_name_ET"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext_top_shadow_padding"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
android:textStyle="normal"
                android:hint="@string/first_name"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:singleLine="true"
                android:textColor="@color/sign_in_color"
                android:textColorHint="@color/sign_in_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/SUF_last_name_ET"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext_top_shadow_padding"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
android:textStyle="normal"
                android:hint="@string/last_name"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:singleLine="true"
                android:textColor="@color/sign_in_color"
                android:textColorHint="@color/sign_in_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/SUF_email_or_phone_ET"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext_top_shadow_padding"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
android:textStyle="normal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:singleLine="true"
                android:textColor="@color/sign_in_color"
                android:textColorHint="@color/sign_in_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/SUF_password_ET"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext_top_shadow_padding"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
android:textStyle="normal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:singleLine="true"
                android:textColor="@color/sign_in_color"
                android:textColorHint="@color/sign_in_color"
                android:textSize="15sp" />


            <Button
                android:id="@+id/SUF_sign_up_button_BTN"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="97dp"
                android:layout_marginEnd="97dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:text="@string/sign_up"
                android:textColor="@color/color_white"
                android:textSize="15sp" />

            <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:layout_marginStart="41dp"
                android:layout_marginEnd="41dp"
                android:background="@drawable/rounded_for_sign"
                android:orientation="vertical"
                android:layout_marginBottom="74dp"
                android:visibility="visible"
                app:corner_radius="17dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
android:textStyle="normal"
                        android:maxLines="1"
                        android:text="@string/already"
                        android:textColor="@color/jabrutouch_blue"
                        android:textSize="15sp"
                        app:autoSizeTextType="uniform" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/SUF_sign_in_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="7dp"
                        android:fontFamily="sans-serif"
android:textStyle="bold"
                        android:maxLines="1"
                        android:text="@string/sign_in_title"
                        android:textColor="@color/jabrutouch_blue"
                        android:textSize="15sp"
                        app:autoSizeTextType="uniform" />


                </LinearLayout>

            </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4" />


        </LinearLayout>


    </RelativeLayout>


</ScrollView>