<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/jabrutouch_background"
    android:layout_height="match_parent"
    tools:context=".ui.slide_screens.SlideFragments.Walkthrough1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        android:weightSum="640"
        android:orientation="vertical"
        >


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34.2"/>



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:autoSizeTextType="uniform"
            android:maxLines="1"
            android:layout_weight="32"
            android:text="@string/welcome_to"
            android:gravity="center"
            android:fontFamily="sans-serif"
android:textStyle="normal"
            android:textSize="25sp"
            android:textColor="@color/jabrutouch_welcome"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="42"
            app:autoSizeTextType="uniform"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/Jabrutouch"
            android:fontFamily="sans-serif"
android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/jabrutouch_welcome"

            />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70.71"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="323.85"
            android:background="@drawable/ic_books_bg_new"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34.05"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="73.43"
            app:autoSizeTextType="uniform"
            android:maxLines="2"
            android:text="@string/lorem"
            android:textSize="19sp"
            android:fontFamily="sans-serif"
android:textStyle="normal"
            android:gravity="center"
            android:textColor="@color/jabrutouch_lorem"

            />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"/>

        
    </LinearLayout>

</FrameLayout>